--- a/style.css
+++ b/style.css
@@ -90,21 +90,22 @@ main{
     
     .nav-menu{
         position: absolute;
-        top: -100%;
-        /* top: 70px; */
+        top: -4000%;
+        /* margin-top: 120px; */
         gap: 0;
         flex-direction: column;
         width: 100%;
         text-align: center;
         transition: 0.8s;
         background-color: #410602;
+        color: #e4d3ff;
     }
 
     .nav-item{
         margin: 16px 0;
     }
     .nav-menu.active{
-        top: 10%;
+        top: 100%;
     }
     .topbtn{
         display: flex;
